[project]
name = "comfyui-mango-random"
description = "🥭 Mango Random Nodes - A collection of random file selection nodes with image mask support"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "YOUR_GITHUB_REPO_URL"

[tool.comfy]
PublisherId = "YOUR_PUBLISHER_ID"
DisplayName = "ComfyUI-Mango-Random"
Icon = "🥭"
